@@ -68,12 +68,14 @@ size_t interface1_rom_length 1
 
 int beta_active
 int beta_paged
+int beta_custom_rom
 int beta_direction
 libspectrum_byte beta_system
 libspectrum_byte beta_track
 libspectrum_byte beta_sector
 libspectrum_byte beta_data
 libspectrum_byte beta_status
+libspectrum_byte* beta_rom 1
 
 int plusd_active
 int plusd_paged
