@@ -109,12 +109,14 @@ libspectrum_snap_alloc( libspectrum_snap **snap )
 
   libspectrum_snap_set_beta_active( *snap, 0 );
   libspectrum_snap_set_beta_paged( *snap, 0 );
+  libspectrum_snap_set_beta_custom_rom( *snap, 0 );
   libspectrum_snap_set_beta_direction( *snap, 0 );
   libspectrum_snap_set_beta_system( *snap, 0 );
   libspectrum_snap_set_beta_track ( *snap, 0 );
   libspectrum_snap_set_beta_sector( *snap, 0 );
   libspectrum_snap_set_beta_data  ( *snap, 0 );
   libspectrum_snap_set_beta_status( *snap, 0 );
+  libspectrum_snap_set_beta_rom( *snap, 0, NULL );
 
   libspectrum_snap_set_plusd_active( *snap, 0 );
   libspectrum_snap_set_plusd_paged( *snap, 0 );
@@ -195,6 +197,9 @@ libspectrum_snap_free( libspectrum_snap *snap )
     free( libspectrum_snap_dock_cart( snap, i ) );
     free( libspectrum_snap_exrom_cart( snap, i ) );
   }
+
+  if( libspectrum_snap_beta_rom( snap, 0 ) )
+    free( libspectrum_snap_beta_rom( snap, 0 ) );
 
   if( libspectrum_snap_plusd_rom( snap, 0 ) )
     free( libspectrum_snap_plusd_rom( snap, 0 ) );
